Imp #7 : implement search screen This commit implements the search screen. There are still a lot of tests to do like * when the user list shows up. * Error when the edit text is empty. * etc.
Those tests above will be implemented to gether with issue #8.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GCForward</string>
+    <string name="btn_search">SEARCH</string>
+    <string name="hint_username">GitHub Username</string>
 </resources>
