--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">GCForward</string>
     <string name="btn_search">SEARCH</string>
     <string name="hint_username">GitHub Username</string>
+    <string name="image_description">Profile avatar</string>
+    <string name="txt_username_default">Username</string>
 </resources>
